fix main width bug on mobile

--- a/assets/css/base/_layout.scss
+++ b/assets/css/base/_layout.scss
@@ -40,7 +40,7 @@ main {
     --main-width: #{$main-width};
     --main-margin-sides: #{$main-margin-sides};
     --main-margin-top: #{$main-margin-top};
-    max-width: $main-width;
+    max-width: var(--main-width);
     margin: var(--main-margin-top) var(--main-margin-sides) 0;
     box-sizing: border-box;
     display: flex;
